# fxmacrodata

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
docs/: conf.py  index.md  index.rst
examples/: example_usage.py
fxmacrodata/: async_client.py  client.py  exceptions.py  utils.py
tests/: test_client.py
