[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxmacrodata"
version = "0.1.0"
description = "Python client for the FXMacroData API, providing forex macroeconomic data for traders, quants, and analysts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "FXMacroData", email = "info@fxmacrodata.com" }
]

keywords = [
    "forex",
    "macro data",
    "macroeconomics",
    "trading",
    "quant",
    "economic indicators",
    "fxmacrodata",
    "rapidapi",
]

# Links shown on your PyPI project page
[project.urls]
Homepage = "https://fxmacrodata.com/?utm_source=pypi&utm_medium=package&utm_campaign=python_sdk"
Documentation = "https://fxmacrodata.com/api/docs?utm_source=pypi&utm_medium=package&utm_campaign=python_sdk"
Source = "https://github.com/fxmacrodata/fxmacrodata"
Issues = "https://github.com/fxmacrodata/fxmacrodata"

# What your package needs
[project.dependencies]
requests = ">=2.28"
aiohttp = ">=3.8"

# Optional: extras for larger deployments
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

# Tell setuptools which packages to include
[tool.setuptools.packages.find]
where = ["."]
include = ["fxmacrodata*"]

# Include non-Python files if needed (not required right now)
[tool.setuptools]
include-package-data = true
